NIFI-6665 updated cli.bat